--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3327,7 +3327,6 @@
       <notes>
         <note category="german">Umfragen können an dieser Stelle nicht angezeigt werden. Bitte besuche das Forum.</note>
         <note category="from">twig:///templates/ajax/forum/posts_small.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Umfragen können an dieser Stelle nicht angezeigt werden. Bitte besuche das Forum.</source>
@@ -3338,7 +3337,6 @@
       <notes>
         <note category="german">Diese Umfrage ist ungültig oder wurde gelöscht.</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Diese Umfrage ist ungültig oder wurde gelöscht.</source>
@@ -3349,7 +3347,6 @@
       <notes>
         <note category="german">Abstimmen</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Abstimmen</source>
@@ -3360,7 +3357,6 @@
       <notes>
         <note category="german">Ergebnisse anzeigen</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Ergebnisse anzeigen</source>
@@ -3371,7 +3367,6 @@
       <notes>
         <note category="german">Wenn du die Ergebnisse abrufst kannst du danach nicht mehr abstimmen. Bist du sicher?</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Wenn du die Ergebnisse abrufst kannst du danach nicht mehr abstimmen. Bist du sicher?</source>
@@ -3382,7 +3377,6 @@
       <notes>
         <note category="german">Umfrage einfügen</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Umfrage einfügen</source>
@@ -3393,7 +3387,6 @@
       <notes>
         <note category="german">Kontrolliere deine Eingaben! Umfragen können nach dem Absenden des Posts nicht mehr bearbeitet werden!</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Kontrolliere deine Eingaben! Umfragen können nach dem Absenden des Posts nicht mehr bearbeitet werden!</source>
@@ -3404,7 +3397,6 @@
       <notes>
         <note category="german">Fragetext eingeben (optional)</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Fragetext eingeben (optional)</source>
@@ -3415,7 +3407,6 @@
       <notes>
         <note category="german">Antwort hinzufügen</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Antwort hinzufügen</source>
@@ -3426,7 +3417,6 @@
       <notes>
         <note category="german">Antwort</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Antwort</source>
@@ -3437,7 +3427,6 @@
       <notes>
         <note category="german">(optional)</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>(optional)</source>
@@ -3448,7 +3437,6 @@
       <notes>
         <note category="german">Info-Text hinzufügen</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Info-Text hinzufügen</source>
@@ -3459,7 +3447,6 @@
       <notes>
         <note category="german">Info-Text</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Info-Text</source>
@@ -3470,7 +3457,6 @@
       <notes>
         <note category="german">Du musst mindestens eine Antwort eingeben.</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Du musst mindestens eine Antwort eingeben.</source>
@@ -3479,9 +3465,8 @@
     </unit>
     <unit id="OO3MLkJ" name="Spielernamen einfügen">
       <notes>
-        <note category="german">Spielernamen einfügen</note>
+        <note category="german">Spieler</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Spielernamen einfügen</source>
@@ -3492,7 +3477,6 @@
       <notes>
         <note category="german">Umfrage schließen</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Umfrage schließen</source>
@@ -3503,7 +3487,6 @@
       <notes>
         <note category="german">Diese Aktion kann nicht rückgängig gemacht werden. Bist du sicher?</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Diese Aktion kann nicht rückgängig gemacht werden. Bist du sicher?</source>
@@ -3514,7 +3497,6 @@
       <notes>
         <note category="german">Animateur-Team</note>
         <note category="from">twig:///templates/ajax/forum/posts.html.twig;twig:///templates/ajax/forum/posts_small.html.twig;twig:///templates/ajax/forum/search_result.html.twig;twig:///templates/ajax/forum/view.html.twig;twig:///templates/ajax/soul/visit.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Animateur-Team</source>
@@ -3525,7 +3507,6 @@
       <notes>
         <note category="german">Entwickler</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Entwickler</source>
