--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3550,7 +3550,7 @@
         <target>Ya no puedes cambiar tu nombre de jugador.</target>
       </segment>
     </unit>
-    <unit id="yF2vVL5" name="{user} war in der Vergangenheit unter folgenden Namen bekannt:">
+    <unit id="m65CDx_" name="{user} war in der Vergangenheit unter folgenden Namen bekannt:">
       <notes>
         <note category="german">{user} war in der Vergangenheit unter folgenden Namen bekannt:</note>
         <note category="from">twig:///templates/ajax/soul/badges.html.twig;twig:///templates/ajax/soul/visit.html.twig</note>
@@ -3767,7 +3767,6 @@
       <notes>
         <note category="german">Dies ist eine Event-Stadt.</note>
         <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Dies ist eine Event-Stadt.</source>
@@ -3778,7 +3777,6 @@
       <notes>
         <note category="german">Animateur</note>
         <note category="from">twig:///templates/ajax/soul/badges.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Animateur</source>
@@ -3789,11 +3787,21 @@
       <notes>
         <note category="german">Diese Karteikarte gehört einem Animateur. Animateure organisieren und koordinieren Community-Events.</note>
         <note category="from">twig:///templates/ajax/soul/badges.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Diese Karteikarte gehört einem Animateur. Animateure organisieren und koordinieren Community-Events.</source>
         <target>Esta ficha pertenece a un animador. Los animadores organizan y coordinan eventos comunitarios.</target>
+      </segment>
+    </unit>
+    <unit id="yF2vVL5" name="%user% war in der Vergangenheit unter folgenden Namen bekannt:">
+      <notes>
+        <note category="german">%user% war in der Vergangenheit unter folgenden Namen bekannt:</note>
+        <note category="from">twig:///templates/ajax/soul/visit.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>%user% war in der Vergangenheit unter folgenden Namen bekannt:</source>
+        <target>%user% war in der Vergangenheit unter folgenden Namen bekannt:</target>
       </segment>
     </unit>
   </file>
