--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -14163,5 +14163,11 @@
         <target><![CDATA[{citizen} hat <strong>{count} Haufen Schutt</strong> mithilfe von {item} bereinigt.]]></target>
       </segment>
     </unit>
+    <unit id="b0OOd25">
+      <segment>
+        <source>Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).</source>
+        <target>Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
