--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22221,5 +22221,15 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target><![CDATA[{citizen} cleared <strong>{count} parts</strong> of the zone with their {item}.]]></target>
       </segment>
     </unit>
+    <unit id="b0OOd25">
+      <notes>
+        <note category="german">Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/town/door.html.twig</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).</source>
+        <target>This action is made possible by a building in your town (only Heroes can do this).</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
