--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22121,5 +22121,16 @@
         <target><![CDATA[{citizen} a déblayé la zone pour <strong>{count} points</strong> avec  {item} .]]></target>
       </segment>
     </unit>
+    <unit id="b0OOd25">
+      <notes>
+        <note category="german">Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/town/door.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion wird durch ein Gebäude in der Stadt ermöglicht (nur Helden können sie verwenden).</source>
+        <target>Cette action est permise par un bâtiment de votre ville (seuls les héros peuvent en profiter).</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
